# cpp-roguelike

./: CMakeLists.txt  Roguelike  main.cpp
configs/: config.txt  gameover.txt  map.txt  map1.txt  start.txt  win.txt
logic/: Collider.h  Config.h  Game.h  Loader.h  Render.h  Utility.h
logic/objects/: Block.h  Decoration.h  Enemy.h  Object.h  Player.h  TimedObjects.h  Weapon.h
